<resources>
    <!-- TITLES -->
    <string name="app_name">Awaken</string>
    <string name="intro_one_title">Access Wake-On-LAN Devices</string>
    <string name="intro_two_title">Send A Wake Up Packet to Your Device</string>
    <string name="new_connection">New Connection</string>
    <string name="host_title">Enter Your\nHostname/IP Address</string>

    <!-- DESCRIPTIONS -->
    <string name="intro_one_description">Make sure your device is Wake-On-LAN enabled.</string>
    <string name="intro_two_description">Remotely wake up your Wake-On-LAN enabled devices!</string>
    <string name="woken">has been woken!</string>

    <!-- LABELS -->
    <string name="enter">ENTER</string>
    <string name="connections">Connections</string>
    <string name="nickname">Nickname</string>
    <string name="host_ip">Hostname/IP Address</string>
    <string name="mac">MAC Address</string>
    <string name="seven">7</string>
    <string name="nine">9</string>
    <string name="wol">WOL Port (0&#8211;65535)</string>
    <string name="port">Device Port (0&#8211;65535)</string>
    <string name="last_woken_label">Last woken:</string>
    <string name="new_connection_success">Successfully created new connection!</string>
    <string name="new_connection_fail">Failed to create new connection.</string>
    <string name="mac_address_invalid">MAC Address is invalid!</string>

    <!-- VALUES -->
    <string name="logo_transition">Logo transition</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
</resources>
