<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorPrimary"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:lines="2"
        android:text="@string/new_connection"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nickname_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nickname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:textColor="@color/colorAccent"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:textSize="20sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/host_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/host_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/host_ip"
            android:textColor="@color/colorAccent"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:textSize="20sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mac_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/mac_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mac"
            android:textColor="@color/colorAccent"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:textSize="20sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wol_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/wol_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wol"
            android:textColor="@color/colorAccent"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:textSize="20sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/port_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/port_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/port"
            android:textColor="@color/colorAccent"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:textSize="20sp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/enter"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"/>

</LinearLayout>